# NdkExceptionSigabrt

./: .gitignore  .gitmodules  README.md  settings.gradle
app/src/androidTest/java/com/example/exceptioncrash/: ExampleInstrumentedTest.kt
app/src/main/java/com/example/exceptioncrash/: MainActivity.java
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
jnilib/: CMakeLists.txt  build.gradle
jnilib/src/main/cpp/: jnilib.cpp
jnilib/src/main/java/com/example/jnilib/: TestAPI.java
nativelib/: CMakeLists.txt  build.gradle
nativelib/src/main/cpp/: MyException.cpp  MyException.h  TestAPI.cpp  TestAPI.h
src/: CMakeLists.txt
src/include/: DllExport.h  MyException.h  TestAPI.h
src/src/: MyException.cpp  MyExceptionImpl.h  TestAPI.cpp  TestAPIImpl.h
wrappers/: build.gradle
wrappers/app/: build.gradle
wrappers/app/src/main/: AndroidManifest.xml
wrappers/app/src/main/res/values/: strings.xml  themes.xml
wrappers/app/src/test/java/com/example/exceptioncrash/: ExampleUnitTest.kt
wrappers/jnilib/: CMakeLists.txt  build.gradle
wrappers/jnilib/src/main/java/com/example/jnilib/: TestAPIJni.java
wrappers/nativelib/: CMakeLists.txt
